<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imgMenuCart"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/gambar_makanan"
            android:scaleType="centerCrop"
            android:src="@drawable/salmonsusi"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tvNamaImgCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/imgMenuCart"
            android:text="@string/sate_ayam"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/txt_cart_harga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvNamaImgCart"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/imgMenuCart"
            android:text="@string/harga" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/decrement"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:padding="20dp"
            android:src="@drawable/baseline_delete_24"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/btn_minCart"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/decrement"
                android:src="@drawable/iconmonstr_minus_circle_thin"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/quantityTextView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/quantity"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/btnPlusCart"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/increment"
                android:src="@drawable/iconmonstr_plus_circle_thin"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_catatan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgMenuCart"
            android:layout_marginStart="100dp"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:text="@string/Catatan"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/tv_catatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgMenuCart"
            android:layout_toEndOf="@+id/txt_catatan"
            android:background="@drawable/bg_note"
            android:hint="@string/note"
            android:imeOptions="actionDone"

            android:inputType="text"
            android:maxLines="2"
            android:padding="5dp"
            android:textSize="14sp"
            tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>