<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.ProfileFragment">

    <ImageButton
        android:contentDescription="@string/edit_profile"
        android:id="@+id/editProfile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/twotone_edit_24"
        android:backgroundTint="@color/white"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="25sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/profileFragment"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:background="@color/black"
                android:scaleType="centerCrop"
                android:contentDescription="@string/foto"
                android:src="@drawable/gracee" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/Username"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="40dp"
            android:background="@color/cream"
            android:padding="10dp"
            android:text=""
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="40dp"
            android:background="@color/cream"
            android:inputType="textPassword"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:padding="10dp"
            android:text="@string/text_password"
            android:textSize="20sp"
            tools:ignore="TextViewEdits" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/Email"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="40dp"
            android:background="@color/cream"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/no_Telepon"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_notlp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="40dp"
            android:background="@color/cream"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logut"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:clickable="true"
            android:drawableStart="@drawable/ic_exit"
            android:focusable="true"
            android:text="@string/Log_Out"
            android:textAllCaps="false"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />


    </LinearLayout>

</FrameLayout>