<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_list"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="15dp"
    app:cardPreventCornerOverlap="true">


    <ImageView
        android:id="@+id/imgMenu"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/gambar_makanan"
        android:layout_marginBottom="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ayam" />

    <TextView
        android:id="@+id/tvNamaImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:layout_marginStart="10dp"
        android:text="@string/nama_makanan"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvHarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="240dp"
        android:text="@string/harga"
        android:textSize="20sp" />


</androidx.cardview.widget.CardView>