<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentHomeYA"
    android:fillViewport="true"
    tools:context=".ui.fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:padding="5dp"
            android:text="@string/hello"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/nama"
            android:textColor="@color/amber900"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_marginStart="5dp"
        android:layout_width="284dp"
        android:layout_height="35dp"
        android:background="@drawable/radius"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            app:drawableStartCompat="@drawable/spoon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/lagi_mau_mam_apa" />


        <ImageView
            android:layout_marginTop="5dp"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:contentDescription="@string/search"
            android:src="@drawable/search_24" />

    </LinearLayout>


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="1dp"
        android:background="@color/white"
        android:contentDescription="@string/button_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shopping_cart" />

    <ImageButton

        android:id="@+id/imageButton2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="2dp"
        android:background="@color/white"
        android:contentDescription="@string/button_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_account_circle_24" />

    <RelativeLayout

        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/bg_nav"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton">

        <!-- android:background="@drawable/background_nav"-->

        <androidx.cardview.widget.CardView
            android:id="@+id/card_nav1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            app:cardCornerRadius="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:contentDescription="@string/gambar_makanan"
                android:src="@drawable/ayam" />


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textDiskon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@+id/card_nav1"
            android:text="@string/diskon"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textDiskon"
            android:layout_marginStart="14dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/card_nav1"
            android:paddingTop="10dp"
            android:text="@string/pesan_makanan_lewat_aplikasi"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvKategori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/list_makanan"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvKategori" />

        <ImageButton
            android:id="@+id/btn_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/textView5"
            android:background="@color/white"
            android:contentDescription="@string/button_toogle"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/list"
            app:layout_constraintBottom_toTopOf="@+id/rvListMenu"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="RedundantDescriptionCheck" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListMenu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />


        <ProgressBar

            android:id="@+id/pgLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>