<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    android:layout_margin="2dp"
    app:cardBackgroundColor="@color/white"
    app:cardPreventCornerOverlap="true"
    android:id="@+id/item_list">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    <androidx.cardview.widget.CardView
        android:id="@+id/id_cardlist"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp">


        <ImageView
            android:id="@+id/imgMenu"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ayam"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/gambar_makanan"/>
    </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvNamaImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:ellipsize="marquee"
            android:singleLine="true"

            android:layout_toEndOf="@+id/id_cardlist"
            android:text="@string/ayam_Bakar"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvHarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvNamaImg"
            android:layout_marginStart="140dp"
            android:paddingTop="10dp"
            />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_foward"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/arrow_forward"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>

